syntax = "proto3";

import "src/proto/user.proto";
import "src/proto/entities/auth_entity.proto";

package authService;

service AuthService {
    rpc Token(TokensRequest) returns (TokensEntity) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
    rpc Signup(SignupAccountRequest) returns (SignupAccountResponse) {};
}

// token messages
message TokensRequest {
    string refreshToken = 1;
}

// login messages
message LoginRequest {
    string username = 1;
    string password = 2;
}

// TODO: add other params eg. CreateCourierRequest, CreateFleetRequest
message SignupAccountRequest {
    oneof params_oneof {
        userService.CreateUserRequest createUserRequest = 1;
    }
}
